<<<<<<< Updated upstream
[gd_scene load_steps=6 format=3 uid="uid://c50ybxl8h0xv6"]

[ext_resource type="FontFile" path="res://Fonts/futura/futur.ttf" id="1_sn2qd"]
[ext_resource type="Script" uid="uid://bdyhtrwx6t8aa" path="res://pointer.gd" id="2_2jkrm"]
[ext_resource type="FontFile" path="res://Fonts/futura/Futura Bold font.ttf" id="2_lg454"]
=======
[gd_scene load_steps=6 format=3 uid="uid://6kq8lxdpa1rh"]

[ext_resource type="FontFile" uid="uid://ddiuhoq4ivkqw" path="res://Fonts/futura/futur.ttf" id="1_sn2qd"]
[ext_resource type="Script" uid="uid://h2k78f6oh1uf" path="res://pointer.gd" id="2_2jkrm"]
[ext_resource type="FontFile" uid="uid://bhrs8lfi6q8ld" path="res://Fonts/futura/Futura Bold font.ttf" id="2_lg454"]
>>>>>>> Stashed changes

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sn2qd"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sn2qd"]

[node name="Node2D" type="Node2D"]

[node name="Label" type="Label" parent="."]
offset_left = 415.0
offset_top = 112.0
offset_right = 478.0
offset_bottom = 204.0
theme_override_fonts/font = ExtResource("2_lg454")
theme_override_font_sizes/font_size = 76
text = ">"
script = ExtResource("2_2jkrm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(9, 0)
offset_left = 478.0
offset_top = 129.0
offset_right = 720.0
offset_bottom = 374.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 52
metadata/_edit_group_ = true

[node name="Thing1" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sn2qd")
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_sn2qd")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_sn2qd")
text = "thing1"
flat = true

[node name="Thing2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sn2qd")
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_sn2qd")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_sn2qd")
text = "thing2"
flat = true

[node name="Thing3" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sn2qd")
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_sn2qd")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_sn2qd")
text = "thing3"
flat = true

[connection signal="mouse_entered" from="VBoxContainer/Thing1" to="Label" method="_on_thing_1_mouse_entered"]
[connection signal="mouse_entered" from="VBoxContainer/Thing2" to="Label" method="_on_thing_2_mouse_entered"]
[connection signal="mouse_entered" from="VBoxContainer/Thing3" to="Label" method="_on_thing_3_mouse_entered"]
